--- a/services/frontend/src/components/ChatImage.module.scss
+++ b/services/frontend/src/components/ChatImage.module.scss
@@ -1,4 +1,44 @@
 .image {
+  pre.caption {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+    font-family:
+      'NotoColorEmojiLimited',
+      Inter,
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      'Fira Sans',
+      'Droid Sans',
+      'Helvetica Neue',
+      sans-serif;
+  }
+
+  .squareBox {
+    width: 100%;
+    overflow: hidden;
+    animation-duration: 1.8s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #f4f4f4 8%, #ddd 38%, #f4f4f4 54%);
+    background-size: 1000px 640px;
+
+    &::before{
+      content: "";
+      display: block;
+      padding-top: 100%;
+    }
+  }
+
   .dot {
     display: inline-block;
     width: 7px;
@@ -36,5 +76,14 @@
   60%,
   100% {
     transform: translateY(0);
+  }
+}
+
+@keyframes placeHolderShimmer{
+  0%{
+    background-position: -150% 0;
+  }
+  100%{
+    background-position: 150% 0;
   }
 }
