--- a/services/frontend/src/components/ChatImage.module.scss
+++ b/services/frontend/src/components/ChatImage.module.scss
@@ -23,14 +23,14 @@
   .squareBox {
     width: 100%;
     overflow: hidden;
-    animation-duration: 1.8s;
+    animation-duration: 1s;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
     animation-name: placeHolderShimmer;
     animation-timing-function: linear;
     background: #f6f7f8;
     background: linear-gradient(to right, #f4f4f4 8%, #ddd 38%, #f4f4f4 54%);
-    background-size: 1000px 640px;
+    background-size: 150% 100%;
 
     &::before{
       content: "";
